finalproject0124/src/main/java/com/test/finalproject/error/exception/AdminCheckException.java
package com.test.finalproject.error.exception;

public class AdminCheckException extends RuntimeException{

	public AdminCheckException() {
		super();
	}
	
	public AdminCheckException(String message) {
		super(message);
	}
}
